--- a/package.json
+++ b/package.json
@@ -23,9 +23,16 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
     "sass": "^1.65.1",
     "tailwindcss": "3.3.3",
     "three": "^0.155.0",
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@kamona/tailwindcss-perspective": "^0.1.1"
   }
 }
